--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.1",
     "sqlite": "^4.0.21",
     "sqlite3": "^5.0.2"
   },
